# rly

./: .gitignore  .gitleaks.toml  .rly-source.json  CLI_GUIDE.md  CONTRIBUTING.md  KEYS.txt  LICENSE  README.md  SECURITY.md  TRUST.md  cli-machine-interface.md  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/fixtures/readme-contract/: fail-forbidden-no-node-requirement.md  fail-forbidden-ship-inside-npm.md  fail-missing-auth.md  fail-missing-quickstart.md  fail-missing-security-contact.md  pass-consumer-contract.md
.github/scripts/: check-readme-contract.mjs
.github/workflows/: cli-source-ci.yml  publish-npm.yml
langchain-python/: .mirror-meta.json  README.md  pyproject.toml
langchain-python/examples/: langchain_quickstart.py  langchain_retrieval_quickstart.py
langchain-python/langchain_replylayer/: __init__.py  _clients.py  _documents.py  _governance.py  loader.py  retriever.py  toolkit.py  tools.py
langchain-python/tests/: test_documents.py  test_governance.py  test_loader.py  test_retriever.py  test_toolkit.py  test_tools.py
src/: api-client.ts  attachments.ts  auth.ts  build-metadata.ts  errors.ts  format.ts  http-dispatcher.ts  index.ts  protocol.ts  redact.ts  resolve.ts  types.ts
src/commands/: _validate.ts  account.ts  api-key.ts  auth.ts  config.ts  doctor.ts  domain.ts  draft.ts  firewall-release.ts  inbound-blocklist.ts  inbox.ts  legal-hold.ts  mailbox.ts  policy.ts  recipients.ts  reply.ts  send.ts  signup.ts  simulate.ts  suppressions.ts  version.ts  webhook.ts
src/lib/: confirm.ts  idempotency-probe.ts  legal-assent-copy.ts  search-operators.ts  secret-input.ts  strict-outcome.ts  web-risk-acceptance.ts
